tests/compile_fail/state/multiple_superstate_attrs.stderr
error: multiple `moku::superstate` attributes defined for this `moku::State`
  --> tests/compile_fail/state/multiple_superstate_attrs.rs:17:5
   |
17 |     #[superstate(Top)]
   |     ^
